force-app/main/default/objects/Asset/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>CX_Products</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this product (Asset) to the specific Contract it belongs to. Native Salesforce has no Asset-to-Contract relationship; this is the minimal junction that models NAVEX's company-contract-product hierarchy (multi-product contracts, and the same product across multiple contracts).</description>
</CustomField>