force-app/main/default/objects/Asset/fields/Product_Health__c.field-meta.xml
<CustomField>
    <fullName>Product_Health__c</fullName>
    <label>Product Health</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Product-level health score (0-100) for this Asset. Enables "Hotline healthy, PolicyTech at long-term risk" granularity.</description>
</CustomField>